<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_school"
                android:title="SIGAA" />
        <item
                android:id="@+id/nav_ru"
                android:icon="@drawable/ic_credit_card"
                android:title="@string/ru_shortcut" />
<!--        <item-->
<!--                android:id="@+id/nav_ru_menu"-->
<!--                android:icon="@drawable/ic_event_note"-->
<!--                android:title="@string/ru_menu" />-->
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_local_library"
            android:title="@string/library_shortcut" />

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings_string"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/info_string" />
    </group>

</menu>
