<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
            android:shortcutId="ru"
            android:enabled="true"
            android:icon="@drawable/ic_credit_card"
            android:shortcutShortLabel="@string/ru_shortcut"
            android:shortcutLongLabel="@string/ru_long_shortcut"
            tools:targetApi="n_mr1">

        <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.rodrigmatrix.sigaaufc"
                android:targetClass="com.rodrigmatrix.sigaaufc.ui.view.main.MainActivity">
            <extra android:name="shortcut" android:value="ru" />
        </intent>

    </shortcut>

    <shortcut
            android:shortcutId="library"
            android:enabled="true"
            android:icon="@drawable/ic_local_library"
            android:shortcutShortLabel="@string/library_shortcut"
            android:shortcutLongLabel="@string/library_shortcut"
            tools:targetApi="n_mr1">

        <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.rodrigmatrix.sigaaufc"
                android:targetClass="com.rodrigmatrix.sigaaufc.ui.view.main.MainActivity">
            <extra android:name="shortcut" android:value="library" />
        </intent>

    </shortcut>

    <shortcut
            android:shortcutId="notifications"
            android:enabled="true"
            android:icon="@drawable/ic_notifications"
            android:shortcutShortLabel="@string/notifications_shortcut"
            android:shortcutLongLabel="@string/notifications_shortcut"
            tools:targetApi="n_mr1">

        <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.rodrigmatrix.sigaaufc"
                android:targetClass="com.rodrigmatrix.sigaaufc.ui.view.main.MainActivity">
            <extra android:name="shortcut" android:value="notifications" />
        </intent>

    </shortcut>

    <shortcut
            android:shortcutId="sigaa"
            android:enabled="true"
            android:icon="@drawable/ic_school"
            android:shortcutShortLabel="@string/sigaa_shortcut"
            android:shortcutLongLabel="@string/sigaa_shortcut"
            tools:targetApi="n_mr1">

        <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.rodrigmatrix.sigaaufc"
                android:targetClass="com.rodrigmatrix.sigaaufc.ui.view.main.MainActivity">
            <extra android:name="shortcut" android:value="sigaa" />
        </intent>

    </shortcut>
</PreferenceScreen>